fixed login constraints

--- a/Honours Project/Base.lproj/Main.storyboard
+++ b/Honours Project/Base.lproj/Main.storyboard
@@ -80,9 +80,11 @@
                         <constraints>
                             <constraint firstItem="LTb-v1-bZx" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="2Al-Rs-bWf"/>
                             <constraint firstItem="bwH-Jo-eud" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="53" id="6fz-CT-9w6"/>
+                            <constraint firstItem="gDG-sd-d7U" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="44" id="71h-xL-jf9"/>
                             <constraint firstItem="RXY-aS-0Up" firstAttribute="trailing" secondItem="mfY-wt-Pyr" secondAttribute="trailing" id="9Bt-D3-Mez"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="bd6-9H-8Vs" secondAttribute="bottom" constant="126" id="9N4-Ac-ezY"/>
                             <constraint firstItem="3hd-Qb-RPp" firstAttribute="centerX" secondItem="mfY-wt-Pyr" secondAttribute="centerX" id="AKE-Uk-zKa"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gDG-sd-d7U" secondAttribute="trailing" constant="43" id="CbB-Qm-4Nj"/>
                             <constraint firstItem="LTb-v1-bZx" firstAttribute="centerX" secondItem="gDG-sd-d7U" secondAttribute="centerX" id="Exs-Wo-4qe"/>
                             <constraint firstItem="mfY-wt-Pyr" firstAttribute="leading" secondItem="RXY-aS-0Up" secondAttribute="leading" id="F2Y-N0-kn0"/>
                             <constraint firstItem="LTb-v1-bZx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Iyh-rX-LeT"/>
@@ -97,6 +99,7 @@
                             <constraint firstItem="RXY-aS-0Up" firstAttribute="top" secondItem="LTb-v1-bZx" secondAttribute="bottom" constant="93" id="fk8-ON-Rac"/>
                             <constraint firstItem="3hd-Qb-RPp" firstAttribute="centerX" secondItem="bwH-Jo-eud" secondAttribute="centerX" id="kWP-83-cTb"/>
                             <constraint firstItem="LTb-v1-bZx" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="28" id="nWa-ge-0JT"/>
+                            <constraint firstItem="gDG-sd-d7U" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="p61-h4-fSb"/>
                             <constraint firstItem="bd6-9H-8Vs" firstAttribute="top" secondItem="bwH-Jo-eud" secondAttribute="bottom" constant="8" symbolic="YES" id="pdQ-dd-MKB"/>
                             <constraint firstItem="RXY-aS-0Up" firstAttribute="top" secondItem="gDG-sd-d7U" secondAttribute="bottom" id="q7d-Vt-Wqr"/>
                         </constraints>
